Fixed overlapping map CSS bug

--- a/app/component/itinerary.scss
+++ b/app/component/itinerary.scss
@@ -903,8 +903,13 @@ div.itinerary-container-content {
 .print-itinerary-leg {
   display: block;
 
+  &.walk {
+    height: 11em;
+  }
+
   .print-itinerary-leg-container {
     width: 100%;
+    height: 100%;
     display: flex;
   }
 
